--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "handlebars": "^4.7.7",
     "@fastify/formbody": "^7.4.0",
     "@fastify/static": "^6.6.0",
-    "@fastify/view": "^7.3.0"
+    "@fastify/view": "^7.3.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": "14.x"
