--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fastify/static": "^6.6.0",
     "@fastify/view": "^7.3.0",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "fs": "^0.0.2"
   },
   "engines": {
     "node": "14.x"
