--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@fastify/view": "^7.3.0",
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "fs": "^0.0.2"
+    "fs": "^0.0.2",
+    "fs-extra": "^11.1.0"
   },
   "engines": {
     "node": "14.x"
